--- a/css/styles.css
+++ b/css/styles.css
@@ -198,7 +198,11 @@
 /* ------------------------------------------------------------------- 
  * ## spacing and typescale
  * ------------------------------------------------------------------- */
-:root {
+ .container-fluid {
+  padding: 3% 15% 7%;
+}
+
+ :root {
 
     /* spacing
      * base font size: 18px 
